--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "spryker/glossary": "^3.0.0",
     "spryker/kernel": "^3.0.0",
     "spryker/locale": "^3.0.0",
-    "spryker/product": "^5.2.0",
+    "spryker/product": "^5.2.0 || ^6.0.0",
     "spryker/propel-orm": "^1.2.0",
     "spryker/util-encoding": "^2.0.0"
   },
