CC-25423: Introduced Attributes Backend API (#9886)
CC-25423 Attributes Backend API

--- a/tests/SprykerTest/Zed/ProductAttribute/codeception.yml
+++ b/tests/SprykerTest/Zed/ProductAttribute/codeception.yml
@@ -27,3 +27,4 @@ suites:
                 - \SprykerTest\Shared\Product\Helper\ProductDataHelper
                 - \SprykerTest\Zed\Locale\Helper\LocaleDataHelper
                 - \SprykerTest\Zed\ProductAttribute\Helper\ProductAttributeDataHelper
+                - \SprykerTest\Shared\Testify\Helper\TableRelationsCleanupHelper
