--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "license": "proprietary",
     "require": {
         "php": ">=8.0",
+        "spryker/acl-merchant-portal-extension": "^1.0.0",
         "spryker/glossary": "^3.8.0",
         "spryker/kernel": "^3.30.0",
         "spryker/locale": "^3.0.0",
