--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "spryker/acl-merchant-portal-extension": "^1.0.0",
         "spryker/glossary": "^3.8.0",
         "spryker/kernel": "^3.30.0",
-        "spryker/locale": "^3.0.0",
+        "spryker/locale": "^3.0.0 || ^4.0.0",
         "spryker/product": "^5.2.0 || ^6.0.0",
         "spryker/propel-orm": "^1.2.0",
         "spryker/transfer": "^3.27.0",
