--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "spryker/kernel": "^3.30.0",
         "spryker/locale": "^3.0.0 || ^4.0.0",
         "spryker/product": "^5.2.0 || ^6.0.0",
+        "spryker/product-attribute-extension": "^1.0.0",
         "spryker/propel-orm": "^1.2.0",
         "spryker/transfer": "^3.27.0",
         "spryker/util-encoding": "^2.0.0",
