FRW-10648 Fixed PHP stan

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,6 @@
 parameters:
     level: 7
-    checkMissingIterableValueType: false
     ignoreErrors:
         - '#Call to an undefined method .+Criteria::.+\(\).#'
+        -
+            identifier: missingType.iterableValue
